--- a/style.css
+++ b/style.css
@@ -18,83 +18,31 @@ body {
   z-index: -100;
 }
 
-#corpocentrale {
+#corpocentrale, #corpocentrale2 {
   position: absolute;
   z-index: 100;
   align: center;
   left: 38%;
   top: 15%;
-  width: 50%;
+  width: 54%;
 }
 
-#imglohino {
-  width: 100%;
+#imgloghino {
+  width: 55%;
   opacity: 0;
   float: left;
   margin-top: 1%;
+
   animation-name: hello;
   animation-duration: 3s;
   animation-fill-mode: forwards;
   animation-delay: 1s;
 }
-
-#menulist {
-  float: right;
-  margin-right: 35%;
-  margin-top: 20%;
-
-}
-
-@keyframes menulist {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-#menulist ul {
-  list-style-type: none;
-  color: white;
-  font-family: Musket regular;
-  font-size: 28px;
-  opacity: 0;
-  animation-name: menulist;
-  animation-delay: 7s;
-  animation-duration: 2s;
-  animation-fill-mode: forwards;
-}
-
-#menulist ul li {
-  margin-bottom: 11%;
-}
-
-/* unvisited link */
-#menulist ul li a:link {
-  color: rgb(172, 210, 237);
-  text-decoration: none;
-}
-
-/* visited link */
-#menulist ul li a:visited {
-  color: rgb(172, 210, 237);
-  text-decoration: none;
-}
-
-/* mouse over link */
-#menulist ul li a:hover {
-  color: white;
-  text-decoration: none;
-  font-size: 29px;
-}
-
-/* selected link */
-#menulist ul li a:active {
-  color: white;
-  text-decoration: none;
-  font-size: 29px;
+#imgloghino2 {
+  opacity: 1;
+  width: 55%;
+  margin-left: -40%;
+  margin-top: 0;
 }
 
 @keyframes hello {
@@ -103,13 +51,6 @@ body {
   }
 
   20% {
-    opacity: 1;
-    width: 55%;
-    margin-left: 0;
-    margin-top: 0;
-  }
-
-  35% {
     opacity: 1;
     width: 55%;
     margin-left: 0;
@@ -145,6 +86,79 @@ body {
   }
 }
 
+
+
+#menulist,#menulist2 {
+  float: right;
+  margin-right: 35%;
+  margin-top: 20%;
+  width: 37%;
+}
+
+
+#menulist2 ul {
+  list-style-type: none;
+  color: white;
+  font-family: Musket regular;
+  font-size: 28px;
+  opacity: 1;
+
+}
+#menulist ul {
+  list-style-type: none;
+  color: white;
+  font-family: Musket regular;
+  font-size: 28px;
+  opacity: 0;
+
+  animation-name: menulist;
+  animation-delay: 7s;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes menulist {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+#menulist ul li,#menulist2 ul li {
+  margin-bottom: 11%;
+}
+
+/* unvisited link */
+#menulist ul li a,#menulist2 ul li a:link {
+  color: rgb(172, 210, 237);
+  text-decoration: none;
+}
+
+/* visited link */
+#menulist ul li a,#menulist2 ul li a:visited {
+  color: rgb(172, 210, 237);
+  text-decoration: none;
+}
+
+/* mouse over link */
+#menulist ul li a,#menulist2 ul li a:hover {
+  color: white;
+  text-decoration: none;
+  font-size: 29px;
+}
+
+/* selected link */
+#menulist ul li a,#menulist2 ul li a:active {
+  color: white;
+  text-decoration: none;
+  font-size: 29px;
+}
+
+
+
 #menu {
   width: 100%;
   height: 100%;
@@ -152,11 +166,19 @@ body {
   z-index: 50;
   background-color: black;
   opacity: 0;
-
   animation-name: coloring;
   animation-delay: 5s;
   animation-duration: 2s;
   animation-fill-mode: forwards;
+}
+
+#menubackfisso{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 50;
+  background-color: black;
+  opacity: 0.5;
 }
 
 @keyframes coloring {
@@ -179,8 +201,11 @@ body {
   animation-fill-mode: forwards;
   animation-direction: normal;
 }
-
-.circle {
+.circle2 img {
+  width: 70%;
+  opacity: 1;
+}
+.circle, .circle2 {
   z-index: 70;
   position: absolute;
   top: 13%;
