--- a/style.css
+++ b/style.css
@@ -9,11 +9,13 @@
 }
 
 body {
+
   padding: 0;
   margin: 0;
 }
 
 #tela {
+  background-image: url(mappamundo.jpeg);
   position: absolute;
   z-index: -100;
 }
