--- a/style0.css
+++ b/style0.css
@@ -9,9 +9,59 @@
 }
 
 body {
-
   padding: 0;
   margin: 0;
+}
+
+#backrosa {
+  background-color: #ff8676;
+  width: 0%;
+  height: 100%;
+  position: absolute;
+  z-index: 200;
+
+
+  animation-name: backentr;
+  animation-delay: 2s;
+  animation-duration: 1.8s;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-in;
+}
+
+@keyframes backentr {
+  0% {
+    width: 0%;
+  }
+
+  100% {
+    width: 100%;
+  }
+}
+
+
+#bluexplore{
+
+position: absolute;
+z-index: 210;
+left: -100%;
+top: -2%;
+
+
+  animation-name: bluentr;
+  animation-delay: 2.3s;
+  animation-duration: 2.3s;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-in;
+
+}
+@keyframes bluentr {
+  0% {
+    left: -100%;
+  }
+
+  100% {
+    left : 0%;
+  }
 }
 
 #tela {
@@ -34,15 +84,14 @@ body {
   opacity: 0;
   float: left;
   margin-top: 1%;
-
 }
+
 #imgloghino2 {
   opacity: 1;
   width: 55%;
   margin-left: -40%;
   margin-top: 0;
-
-  animation-name: muovi ;
+  animation-name: muovi;
   animation-duration: 3s;
   animation-fill-mode: forwards;
   animation-delay: 1s;
@@ -88,4 +137,75 @@ body {
   100% {
     opacity: 0;
   }
+}
+
+#menulist {
+  position: absolute;;
+  z-index: 220;
+  margin-top: 20%;
+  width: 40%;
+  height: 30%;
+}
+
+#menuchile {
+  margin-right: 80%;
+}
+
+#menulist ul {
+  list-style-type:none;
+  color: white;
+  font-family: Musket regular;
+  font-size: 28px;
+  margin-left: -30%;
+
+  animation-name: menul;
+  animation-delay: 4s;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes menul {
+  0% {
+    margin-left: -30%;
+  }
+
+  100% {
+    margin-left: 10%;
+  }
+}
+
+#menulist ul li {
+  margin-bottom: 11%;
+}
+
+#menulist ul li a:link {
+  color: rgb(172, 210, 237);
+  text-decoration: none;
+}
+
+/* visited link */
+#menulist ul li a:visited {
+  color: rgb(172, 210, 237);
+  text-decoration: none;
+}
+
+/* mouse over link */
+#menulist ul li a:hover {
+  color: white;
+  text-decoration: underline;
+  font-size: 33px;
+}
+
+#chile {
+  position: absolute;
+  z-index: 220;
+  float: right;
+  right: 0;
+  width: 55%;
+  display: none;
+}
+
+.chilean {
+  margin-top: 25%;
+  height: 550px;
 }
