--- a/style0.css
+++ b/style0.css
@@ -71,10 +71,13 @@ top: -2%;
 }
 
 #form {
+  background-color: #ff8676;
   position: absolute;
   z-index: 2000;
-  width: 100px;
-  height: 100px;
+  width: 300px;
+  height: 500px;
+  left: 30%;
+  top: 10%;
 }
 
 #corpocentrale, #corpocentrale2 {
