--- a/style0.css
+++ b/style0.css
@@ -71,15 +71,72 @@ top: -2%;
 }
 
 #form {
-  background-color: #0a0a14;
-  opacity: 0.8;
+  background-color: rgba(10, 10, 20, 0.8);
   position: absolute;
   z-index: 2000;
-  width: 300px;
-  height: 400px;
-  left: 30%;
-  top: 10%;
+  width: 400px;
+  height: 500px;
+  left: 39%;
+  top: 20%;
+  border-radius: 16px;
+  align-content: center;
 }
+
+#form h2 {
+  font-family: Musket bold;
+  font-size: 29px;
+  font-style: normal;
+  font-weight: 800;
+  color: #ff8676;
+  text-align: center;
+  margin-top: 10%;
+}
+
+#form h3 {
+  font-family: Musket regular;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 800;
+  color: #ff8676;
+  margin-top: 15%;
+  text-align: center;
+}
+
+#form select{
+  font-family: Musket regular;
+  font-size: 15px;
+  border-radius: 10px;
+  border: #ff8676 1px solid;
+  color: white;
+  text-decoration: none;
+ display: inline-block;
+ padding: 15px 32px;
+ background-color: rgba(10, 10, 20, 0);
+}
+
+.thabutton {
+  font-family: Musket bold;
+  font-size: 20px;
+  letter-spacing: 0.1em;
+  background-color: #ff8676;
+  border-radius: 10px;
+  border: none;
+  color: white;
+  text-align: center;
+  padding: 15px 32px;
+  text-decoration: none;
+ display: inline-block;
+ margin-top: 18%;
+ margin-left: 28.7%;
+
+}
+.thabutton:hover {}
+
+.thabutton:active {
+  transform: translateY(2px);
+}
+
+
 
 #corpocentrale, #corpocentrale2 {
   position: absolute;
@@ -284,13 +341,7 @@ h1 {
   text-decoration: none;
 }
 
-#form h2 {
-  font-family: Musket bold;
-  font-size: 15px;
-  font-style: normal;
-  font-weight: 800;
-  color:  #ff8676;
-}
+
 
 .button {
   animation-name: upup;
