--- a/style0.css
+++ b/style0.css
@@ -179,7 +179,7 @@ h2 a:hover :active :visited {
   z-index: 210;
   left: -100%;
   top: -2%;
-  height: 102%;
+  height: 102.2%;
   animation-name: bluentr;
   animation-delay: 2.3s;
   animation-duration: 2.3s;
@@ -338,7 +338,7 @@ h2 a:hover :active :visited {
   }
 }
 
-#menulist {
+#list {
   position: absolute;
   ;
   z-index: 220;
@@ -351,7 +351,7 @@ h2 a:hover :active :visited {
   margin-right: 80%;
 }
 
-#menulist ul {
+#list ul {
   list-style-type: none;
   color: white;
   font-family: Musket regular;
@@ -361,6 +361,12 @@ h2 a:hover :active :visited {
   animation-delay: 4s;
   animation-duration: 2s;
   animation-fill-mode: forwards;
+}
+
+#backhome{
+  font-size: 20px;
+  text-decoration: underline;
+  margin-top: 30%;
 }
 
 @keyframes menul {
@@ -373,26 +379,38 @@ h2 a:hover :active :visited {
   }
 }
 
-#menulist ul li {
+#list ul li {
   margin-bottom: 11%;
 }
 
-#menulist ul li a:link {
+.menulist :link {
+  color: rgb(172, 210, 237);
+  text-decoration: none;
+}
+#backhome  :link {
   color: rgb(172, 210, 237);
   text-decoration: none;
 }
 
 /* visited link */
-#menulist ul li a:visited {
+.menulist :visited {
+  color: rgb(172, 210, 237);
+  text-decoration: none;
+}
+#backhome  :visited {
   color: rgb(172, 210, 237);
   text-decoration: none;
 }
 
 /* mouse over link */
-#menulist ul li a:hover {
+.menulist :hover {
   color: white;
   text-decoration: none;
   font-size: 40px;
+}
+#backhome :hover {
+  color: white;
+  font-size: 20px;
 }
 
 #chile {
