--- a/style0.css
+++ b/style0.css
@@ -35,12 +35,13 @@ body {
 
 .parabout {
   font-family: Musket regular;
-  font-size: 1em;
+  font-size: 1.2em;
   color: #fff;
   text-align: justify;
   margin: 0% 21% 4% 21%;
   line-height: 2em;
 }
+
 
 #linkend {
   font-family: Musket regular;
@@ -521,4 +522,13 @@ h1 {
   100% {
     font-size: 15px;
   }
+}
+
+.subtitleparabout {
+  font-family: Musket bold;
+  font-size: 1.5em;
+  color: #fff;
+  text-align: justify;
+  margin: 2% 21% 0% 21%;
+  line-height: 2em;
 }
