--- a/style0.css
+++ b/style0.css
@@ -473,7 +473,7 @@ h2 a:hover :active :visited {
 .textsupport {
   position: absolute;
   z-index: 100;
-  margin-right: 5%;
+  right: 5%;
 }
 
 .textback {
@@ -484,7 +484,6 @@ h2 a:hover :active :visited {
 
 h1 {
   float: right;
-  width: 100%;
   height: 10%;
   font-family: Musket bold;
   font-size: 15px;
