--- a/style0.css
+++ b/style0.css
@@ -509,6 +509,18 @@ h1 {
   animation-iteration-count: infinite;
 }
 
+#textback {
+    position: absolute;
+    margin-top: 3%;
+    right: 1%;
+}
+
+#x {
+    position: absolute;
+    right: 2%;
+}
+
+
 @keyframes upup {
   0% {
     font-size: 15px;
