--- a/style0.css
+++ b/style0.css
@@ -501,38 +501,32 @@ h1 {
 }
 
 .button {
-  float: right;
-  animation-name: upup;
-  animation-duration: 2s;
-  animation-fill-mode: both;
-  animation-timing-function: ease-in;
-  animation-iteration-count: infinite;
+  position: absolute;
+  bottom: 5%;
+  left: 45%;
+  padding: 10px 24px;
+  text-align: center;
+  border: none;
+  border-radius: 7px;
+  height: 7%;
+  font-family: Musket bold;
+  display: inline-block;
+  font-size: 18px;
+  font-weight: 600;
+  background-color: #ff8676;
+  text-decoration: none;
+  color: white;
 }
 
 #textback {
     position: absolute;
-    margin-top: 3%;
+    margin-top: 1%;
     right: 1%;
 }
 
 #x {
     position: absolute;
     right: 2%;
-}
-
-
-@keyframes upup {
-  0% {
-    font-size: 15px;
-  }
-
-  50% {
-    font-size: 22px;
-  }
-
-  100% {
-    font-size: 15px;
-  }
 }
 
 .subtitleparabout {
